test/undefined.ref
Error: File "undefined.cppo", line 2, characters 6-9
Error: The macro 'FOO' is not defined
